Finishing Bootstrap project

--- a/04_bootstrap/bootstrap-project/scss/_navbar.scss
+++ b/04_bootstrap/bootstrap-project/scss/_navbar.scss
@@ -1,7 +1,32 @@
-$main-bckg: #18bc9c;
-$text-clr: #ffffff;
 
-.navbar-container {
+.header-container {
     background-color: $main-bckg;
+    color: $text-clr;
     
+}
+h1 {
+    padding-top: 15px;
+    font-size: 45px;
+}
+
+nav {
+    background-color: $blueish;
+    .container {
+        padding: 6px 0;
+    }
+    .navbar-brand {
+        font-weight: bold;
+    }
+    button {
+        background-color: $main-bckg!important;
+    }
+    
+}
+
+
+.nav-link {
+    color: white!important;
+    &:hover {
+        color: gray!important;
+    }
 }
