--- a/05_javascript/DOM_events/task2/style/main.css
+++ b/05_javascript/DOM_events/task2/style/main.css
@@ -1,35 +1,51 @@
+html {
+    box-sizing: border-box;
+}
+
 .container {
     width: 60%;
     height: 90vh;
     margin:0 auto;
-    border:1px solid black;
+    padding: 10px;
+    border:1px solid rgb(201, 194, 194);
+    border-radius: 15px;
+    box-shadow: 10px 10px 8px #888888;
 }
 
 .chat-container {
-    height: 90%;
-    border:1px solid black;
-    margin: 10px;
+    border:1px solid rgb(131, 126, 126);
+    height: 95%;
+    margin-bottom: 10px;
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
+    overflow: scroll;
 }
 
 .input-text {
-    margin: 10px;
-    width: 70%;
-    padding: 7px 5px;
-    border-radius: 4px;
+    width: 62%;
+    margin-right: 2%;
+    display: inline-block;
+    padding:5px;
+    border-radius: 5px;
+    border:1px solid gray;
 }
 
+
 .submit-button {
-    width: 26%;
-    padding: 7px 0;
+    width: 30%;
     background-color: rgb(193,57,43);
+    color: white;
+    padding:5px;
     border-style: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
-.input-border {
-    border-color: blueviolet;
+.paragraph-style {
+    margin: 10px;
+    background-color: rgb(171, 182, 233);
+    padding: 10px;
+    border-radius: 10px;
+    width: fit-content;
+    color: white;
 }
-
