adding ground moving to super mario

--- a/05_javascript/DOM_events/task4/style/main.css
+++ b/05_javascript/DOM_events/task4/style/main.css
@@ -3,6 +3,7 @@
     background-image: url(../img/bg.jpg);
     background-size: contain;
     background-repeat: repeat-x;
+    background-position: 0 bottom;
     height: 100vh;
 }
 
