--- a/06_finalWebProject/style/main.css
+++ b/06_finalWebProject/style/main.css
@@ -33,4 +33,29 @@ footer {
   footer small {
     color: white; }
 
+.wrapper {
+  max-width: 450px; }
+
+.wrapper .search-input {
+  background-color: white;
+  width: 100%;
+  position: relative; }
+
+.search-input input {
+  height: 55px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0 60px 0 20px;
+  font-size: 18px; }
+
+.autocom-box li {
+  list-style: none;
+  padding: 8px 12px;
+  display: none;
+  width: 100%;
+  cursor: default;
+  border-radius: 3px; }
+
 /*# sourceMappingURL=main.css.map */
