--- a/06_finalWebProject/sass/main.scss
+++ b/06_finalWebProject/sass/main.scss
@@ -1,8 +1,70 @@
 header {
     width: 100%;
+    background-color: rgb(33,37,41);
+    padding: 7px 0;
     nav {
-        width: 45%;
+        width: 60%;
         margin:0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        h1 {
+            color: white;
+            padding-top: 7px;
+        }
+        .wrapper{
+            max-width: 250px;
+            padding-top:10px;
+        }
+        .search-input{
+            background: #fff;
+            width: 100%;
+            border-radius: 5px;
+            position: relative;
+            box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
+        }
+        input{
+            height: 40px;
+            width: 100%;
+            outline: none;
+            border: none;
+            border-radius: 5px;
+            padding: 0 60px 0 20px;
+            font-size: 18px;
+        }
+        .search-input .autocom-box{
+            padding: 0;
+            opacity: 0;
+            pointer-events: none;
+          }
+        .search-input.active .autocom-box{
+            padding: 10px 8px;
+            opacity: 1;
+            pointer-events: auto;
+            li {
+                display: block;
+            }
+        }
+        .autocom-box {
+            width: 100%;
+            background-color: white;
+            position: absolute;
+            top: 39px;
+            left: 0;
+            border: 1px solid rgb(209, 209, 209);
+            li {
+                list-style: none;
+                padding: 8px 12px;
+                display: none;
+                width: 100%;
+                cursor: pointer;
+                border-radius: 3px;
+                border-bottom: 1px solid rgb(209, 209, 209);
+                &:hover {
+                    background-color: #efefef;
+                }
+            }
+        }
     }
 }
 
@@ -12,7 +74,7 @@ h2 {
 }
 
 main {
-    width: 40%;
+    width: 55%;
     margin:0 auto;
     .main-div {
         display: flex;
@@ -25,11 +87,18 @@ main {
         border-radius: 5px;
         padding: 15px;
         margin: 5px;
+        img {
+            width: 100%;
+            height: 80%;
+        }
+        h4 {
+            font-size: inherit;
+            padding-top: 20px;
+            margin-bottom: 10px;
+            color: rgb(51, 126, 247);
+        }
     }
-    h4 {
-        padding-top: 10px;
-        color: rgb(51, 126, 247);
-    }
+    
     
 }
 footer {
@@ -41,6 +110,3 @@ footer {
         color: white;
     }
 }
-
-
-
