--- a/06_finalWebProject/style/main.css
+++ b/06_finalWebProject/style/main.css
@@ -1,15 +1,67 @@
 header {
-  width: 100%; }
+  width: 100%;
+  background-color: #212529;
+  padding: 7px 0; }
   header nav {
-    width: 45%;
-    margin: 0 auto; }
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+    header nav h1 {
+      color: white;
+      padding-top: 7px; }
+    header nav .wrapper {
+      max-width: 250px;
+      padding-top: 10px; }
+    header nav .search-input {
+      background: #fff;
+      width: 100%;
+      border-radius: 5px;
+      position: relative;
+      box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12); }
+    header nav input {
+      height: 40px;
+      width: 100%;
+      outline: none;
+      border: none;
+      border-radius: 5px;
+      padding: 0 60px 0 20px;
+      font-size: 18px; }
+    header nav .search-input .autocom-box {
+      padding: 0;
+      opacity: 0;
+      pointer-events: none; }
+    header nav .search-input.active .autocom-box {
+      padding: 10px 8px;
+      opacity: 1;
+      pointer-events: auto; }
+      header nav .search-input.active .autocom-box li {
+        display: block; }
+    header nav .autocom-box {
+      width: 100%;
+      background-color: white;
+      position: absolute;
+      top: 39px;
+      left: 0;
+      border: 1px solid #d1d1d1; }
+      header nav .autocom-box li {
+        list-style: none;
+        padding: 8px 12px;
+        display: none;
+        width: 100%;
+        cursor: pointer;
+        border-radius: 3px;
+        border-bottom: 1px solid #d1d1d1; }
+        header nav .autocom-box li:hover {
+          background-color: #efefef; }
 
 h2 {
   text-align: center;
   margin-bottom: 50px; }
 
 main {
-  width: 40%;
+  width: 55%;
   margin: 0 auto; }
   main .main-div {
     display: flex;
@@ -21,9 +73,14 @@ main {
     border-radius: 5px;
     padding: 15px;
     margin: 5px; }
-  main h4 {
-    padding-top: 10px;
-    color: #337ef7; }
+    main .tv-div img {
+      width: 100%;
+      height: 80%; }
+    main .tv-div h4 {
+      font-size: inherit;
+      padding-top: 20px;
+      margin-bottom: 10px;
+      color: #337ef7; }
 
 footer {
   background-color: #212529;
@@ -32,30 +89,5 @@ footer {
   margin-top: 30px; }
   footer small {
     color: white; }
-
-.wrapper {
-  max-width: 450px; }
-
-.wrapper .search-input {
-  background-color: white;
-  width: 100%;
-  position: relative; }
-
-.search-input input {
-  height: 55px;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  padding: 0 60px 0 20px;
-  font-size: 18px; }
-
-.autocom-box li {
-  list-style: none;
-  padding: 8px 12px;
-  display: none;
-  width: 100%;
-  cursor: default;
-  border-radius: 3px; }
 
 /*# sourceMappingURL=main.css.map */
